resources/control-panel.css
/* ///////////////////////// Set-up ////////////////////////////// */
:root {
   /* Colours */
  --color-black: #222;
  --color-white: #FFF;
  --color-canvas: #F4F4F4;
  --color-v-light-grey: #EEE;
  --color-light-grey: #CCC;
  --color-mid-grey: #999;
  --color-dark-grey: #666;
  --color-blue: #1432FF;
}

html {
   box-sizing: border-box;
}

.container-flex {
   display: flex
}

*, *:before, *:after {
  box-sizing: inherit;
}

.type-wrapper {
   padding-top: 2.5rem;
   /* resize: both;
   border: 2px solid; */
   /* overflow: auto; */
}

.bread-crumb {
   margin-bottom: 3.5rem;
}

strong {
   font-weight: 600;
}

b {
   color: var(--color-blue);
   font-weight: 600;
}

/* Set-up */
body {
   background-color: var(--color-canvas);
   color: var(--color-black);
   font-family: "Open Sans", "sans-serif";
}

a {
   color: var(--color-black);
}

/* ///////////////////////// end of: Set-up ////////////////////////////// */


/* Panel */
.cp-block {

   width: 300px;
   height: 100%;
   padding: 0 0 0 2rem;
   position: fixed;
   right: 0;
   top: 0;
   z-index: 2;
   background-color: var(--color-white);
   color: var(--color-black);
   font-family: 'Open Sans', sans-serif;
   transform: translateX(300px);
   transition: all 0.4s ease;
}

.cp-alert {
   /* height: 200px; */
   width: 100%;
   padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: fixed;
   background-color: var(--color-white);
   border-radius: 10px;
   top: 0;
   z-index: 3;
   transform: translateY(-100%);
   transition: all 0.4s ease;
}

/* fixing cp-panel inside cp block in order to enamble scrolling */
.cp-panel {
   position: fixed
   top: 0;
   padding-top: 2.2rem;
   padding-right: 2rem;
   padding-bottom: 2rem;
   height: 100%;
   overflow: auto;
   overflow-x: hidden;
}

.cp-button {
   height: 40px;
   width: 40px;
   transform: rotate(45deg);
   border-bottom-left-radius: 10px;
   position: absolute;
   left: -20px;
   top: 48vh;
   z-index: 3;
   background-color: var(--color-white);
   transition: all 0.3s ease;
}

.cp-button img {
   padding-top: 1.3rem;
   padding-left: 0.25rem;
   transform: rotate(-45deg);
}

.cp-button:hover {
   transform: scale(1.1) rotate(45deg);
}

/* Type */
.control-panel .logo {
   margin-bottom: 1.2rem;
   height: 30px;
}

.control-panel .em-dash {
   width: 20px;
   background-color: var(--color-black);
   height: 1px;
   margin-bottom: 1.2rem;
}

/* set type color */
.control-panel h1, .intro, h4 {
   color: var(--color-black);
}

.control-panel .intro {
   margin-bottom: 0.5rem;
}

/* setting opacity to be over-ridden by '.active' class */
.control-panel .label {
   opacity: 0.3;
}

.control-panel h4 {
   margin-bottom: 0.5rem;
   font-size: 15px;
}

.control-panel p, input, output {
   font-size: 13.5px;
   line-height: 1.5;
}

.control-panel hr {
   margin-bottom: 0.75rem;
   border-color: var(--color-light-grey);
   border-width: 1px;
}

.cp-panel .cp-form-block{
   margin-top: 1.5rem;
}

.cp-form {
   display: flex;
   justify-content: space-between;
}

.cp-form-block p {
   margin-top: 0.36rem;
}

.cp-break-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
}

.cp-break-wrapper:last-child {
   margin-top: 0rem;
   padding: 0 1.1rem;
}

.cp-break-wrapper img {
   height: 28px;
}

.cp-break-wrapper input {
   margin: 0 3px;
}
.cp-break-wrapper .divider {
   height: 12px;
   width: 2px;
   background-color: var(--color-black);
   opacity: 0.5;
}

.cp-form-block .break-title {
   margin-bottom: 1rem;
}

.cp-break-wrapper .cp-icon-spacer, .cp-input-spacer {
   opacity: 0;
}

.cp-break-wrapper .cp-icon-fill {
   display: none;
}

.cp-break-inputs {
   margin-top: 0.3rem !important;
}

.control-panel input, output {
   background-color: var(--color-white);
   margin-bottom: 0.3rem;
   height: 22px;
   width: 40px;
   display: block;
   border-left: 0;
   border-top: 0;
   border-right: 0;
   border-color: var(--color-mid-grey);
   text-align: right;
   opacity: 0.3;
}

output, input.alwaysOn {
   opacity: 1;
}

.cp-break-wrapper input {
   width: 37px;
   text-align: center;
}

.control-panel input:focus {
   border-color: var(--color-black);
   color: var(--color-black);
   outline: none;
   opacity: 1;
}

.cp-input-block input:first-child {
   margin-top: 0;
}

/* js classes */
.cp-shift {
   transform: translateX(0px);
   box-shadow: -6px 0px 35px var(--color-v-light-grey);
}

.cp-shift-alert {
   transform: translateY(0px);
   /* transform: translateX(-50%); */
   /* left: 50% !important; */
   box-shadow: 0px 0px 35px var(--color-v-light-grey);
}

.active {
   opacity: 1 !important;
   color: var(--color-blue) !important;
}
/* .active::before {
   content: "* ";
   font-size: 1.3rem;
   vertical-align: -20%;
   color: var(--color-black);
} */

/* end of: js classes */

/* break sections */
#break-bg {
   display: flex;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   height: 100%;
   z-index: -1;
}

#break-line-1, #break-line-2, #break-line-3, #break-line-4 {
   border-right: 1px dashed var(--color-light-grey);
   height: 100%;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
}

#break-line-1, #break-line-2, #break-line-3, #break-line-4 p {
   font-size: 12px;
   padding: 0 1rem 1rem 0;
   color: var(--color-mid-grey);
}

.container-flex {
   display: flex;
}

/* turn off borwser spin buttons */
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
input[type=number] {
    -moz-appearance:textfield;
}

/* button styling */
.button {
display: block;
padding: 15px 25px;
background-color: var(--color-blue);
color: var(--color-white);
width: 180px;
text-align: center;
transition: all 0.3s ease;
}

.button:hover {
-webkit-transform: scale(1.03);
    -ms-transform: scale(1.03);
        transform: scale(1.03);
}

/* tips */

.sect-title svg {
   cursor: pointer;
   padding-left: 0.75rem;
   transition: all 0.3s ease;
   height: 16px;
   fill: var(--color-light-grey);
}

.sect-title svg:hover {
   fill: var(--color-blue);
}

.tip-box {
   padding: 0.8rem 0 0.8rem 1rem;
   /* border: 1px solid var(--color-v-light-grey); */
   border-radius: 3px;
   margin-top: 0.25rem;
   margin-bottom: 0.75rem;
   transform-origin: top;
   display: none;
   max-height: 0;
   background-color: var(--color-canvas);
   transition: max-height 1s ease-in;
}

.tip-message {
   opacity: 0;
   transition: opacity 1s ease;
}

.tip-box img {
   height: 16px;
   margin-right: 0.5rem;
   transition: transform 0.3s ease;
   cursor: pointer;
}

.tip-box img:hover {
   transform: scale(1.15);
}

.tip-box p {
   margin-top: 0;
}

/* js classes */
.tip-show {
   display: flex !important;
}

.tip-draw {
   max-height: 500px;
}

.tip-message-show {
   opacity: 1;
}
/* end of: tips */

/* text tags */

.value-readout::after {
   margin-left: 1rem;
   padding: 0 0.5rem;
   vertical-align: top;
   content: attr(data-content);
   background-color: var(--color-v-light-grey);
   font-size: 12px;
   font-family: "Open Sans";
   color: var(--color-dark-grey);
}










/*  */

